chore: updated link to certificate

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Chicago</h3>
-                            <div class="subheading mb-3"><a href="https://professional.uchicago.edu/find-your-fit/courses/devops">DevOps Professional Certification</a></div>
+                            <div class="subheading mb-3"><a href="https://www.credential.net/f1248860-b7fe-429b-a746-01e452b142b5#gs.02gcga">DevOps Professional Certification</a></div>
                             <p>6 month professional certification program through the University of Chicago. Course mainly covered the CI/CD pipeline and the portfolio project included setting up a CI/CD pipeline using Git, Github, Github Actions, Makefiles, Docker, Kubernetes, Jenkins and Artifactory.</p>
                         </div>
                     </div>
